Bug fix Navbar on mobile screens
Fixed issue with bottom of nav bar being clickable even when hidden

--- a/src/Style Sheets/Small Components/Navbar.css
+++ b/src/Style Sheets/Small Components/Navbar.css
@@ -75,19 +75,21 @@
 
         background: var(--nav);
         flex-direction: column;
-        gap: 8px;
+        gap: 10px;
         padding: 16px 32px;
 
         height: fit-content;
 
-        transition: 0.6s ease;
-        transform: translateY(-100%);
+        transition: 1.2s ease;
+        transform: translateY(-200%);
         z-index: -1;
     }
 
     .other-nav-links.open {
-        transform: translateY(0);
+        transition: 0s;
+        transform: translateY(100%);
         transition: 0.6s ease;
+        transform: translateY(0);
     }
 
     .other-nav-links .link {
